// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ProjectSection with Github link 1`] = `
<article
  className="projectSection"
>
  <header
    className="projectSection__header"
    onClick={[Function]}
  >
    <h2
      className="projectSection__name"
    />
  </header>
  <section
    className="projectSection__description"
    data-active={true}
  >
    <div
      className="projectSection__languages"
      onClick={[Function]}
    />
    <nav
      className="projectSection__links"
    >
      <a
        className="projectSection__github"
        href="Github!"
        rel="noopener"
        target="_blank"
      >
        <img
          src="/dist/images/icons/github/github-white-100.png"
        />
        <p>
          Github
        </p>
      </a>
    </nav>
    <summary
      className="projectSection__summary"
      onClick={[Function]}
    />
  </section>
  <footer
    className="projectSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;

exports[`Render ProjectSection with all props 1`] = `
<article
  className="projectSection"
>
  <header
    className="projectSection__header"
    onClick={[Function]}
  >
    <img
      className="projectSection__logo"
      src="Logo!"
    />
    <h2
      className="projectSection__name"
    >
      Name!
    </h2>
  </header>
  <section
    className="projectSection__description"
    data-active={true}
  >
    <div
      className="projectSection__languages"
      onClick={[Function]}
    >
      <h5
        key="Language1!"
      >
        Language1!
      </h5>
      <h5
        key="Language2!"
      >
        Language2!
      </h5>
    </div>
    <nav
      className="projectSection__links"
    >
      <a
        className="projectSection__github"
        href="Github!"
        rel="noopener"
        target="_blank"
      >
        <img
          src="/dist/images/icons/github/github-white-100.png"
        />
        <p>
          Github
        </p>
      </a>
      <a
        className="projectSection__website"
        href="Website!"
        rel="noopener"
        target="_blank"
      >
        Website
      </a>
      <a
        className="projectSection__customLink"
        href="Custom link link!"
        key="Custom link link!"
        rel="noopener"
        target="_blank"
      />
    </nav>
    <summary
      className="projectSection__summary"
      onClick={[Function]}
    >
      Description!
    </summary>
  </section>
  <footer
    className="projectSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;

exports[`Render ProjectSection with custom links 1`] = `
<article
  className="projectSection"
>
  <header
    className="projectSection__header"
    onClick={[Function]}
  >
    <h2
      className="projectSection__name"
    />
  </header>
  <section
    className="projectSection__description"
    data-active={true}
  >
    <div
      className="projectSection__languages"
      onClick={[Function]}
    />
    <nav
      className="projectSection__links"
    >
      <a
        className="projectSection__customLink"
        href="Custom link link!"
        key="Custom link link!"
        rel="noopener"
        target="_blank"
      />
    </nav>
    <summary
      className="projectSection__summary"
      onClick={[Function]}
    />
  </section>
  <footer
    className="projectSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;

exports[`Render ProjectSection with description 1`] = `
<article
  className="projectSection"
>
  <header
    className="projectSection__header"
    onClick={[Function]}
  >
    <h2
      className="projectSection__name"
    />
  </header>
  <section
    className="projectSection__description"
    data-active={true}
  >
    <div
      className="projectSection__languages"
      onClick={[Function]}
    />
    <nav
      className="projectSection__links"
    />
    <summary
      className="projectSection__summary"
      onClick={[Function]}
    >
      Description!
    </summary>
  </section>
  <footer
    className="projectSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;

exports[`Render ProjectSection with languages 1`] = `
<article
  className="projectSection"
>
  <header
    className="projectSection__header"
    onClick={[Function]}
  >
    <h2
      className="projectSection__name"
    />
  </header>
  <section
    className="projectSection__description"
    data-active={true}
  >
    <div
      className="projectSection__languages"
      onClick={[Function]}
    >
      <h5
        key="Language1!"
      >
        Language1!
      </h5>
      <h5
        key="Language2!"
      >
        Language2!
      </h5>
    </div>
    <nav
      className="projectSection__links"
    />
    <summary
      className="projectSection__summary"
      onClick={[Function]}
    />
  </section>
  <footer
    className="projectSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;

exports[`Render ProjectSection with logo 1`] = `
<article
  className="projectSection"
>
  <header
    className="projectSection__header"
    onClick={[Function]}
  >
    <img
      className="projectSection__logo"
      src="Logo!"
    />
    <h2
      className="projectSection__name"
    />
  </header>
  <section
    className="projectSection__description"
    data-active={true}
  >
    <div
      className="projectSection__languages"
      onClick={[Function]}
    />
    <nav
      className="projectSection__links"
    />
    <summary
      className="projectSection__summary"
      onClick={[Function]}
    />
  </section>
  <footer
    className="projectSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;

exports[`Render ProjectSection with name 1`] = `
<article
  className="projectSection"
>
  <header
    className="projectSection__header"
    onClick={[Function]}
  >
    <h2
      className="projectSection__name"
    >
      Name!
    </h2>
  </header>
  <section
    className="projectSection__description"
    data-active={true}
  >
    <div
      className="projectSection__languages"
      onClick={[Function]}
    />
    <nav
      className="projectSection__links"
    />
    <summary
      className="projectSection__summary"
      onClick={[Function]}
    />
  </section>
  <footer
    className="projectSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;

exports[`Render ProjectSection with website link 1`] = `
<article
  className="projectSection"
>
  <header
    className="projectSection__header"
    onClick={[Function]}
  >
    <h2
      className="projectSection__name"
    />
  </header>
  <section
    className="projectSection__description"
    data-active={true}
  >
    <div
      className="projectSection__languages"
      onClick={[Function]}
    />
    <nav
      className="projectSection__links"
    >
      <a
        className="projectSection__website"
        href="Website!"
        rel="noopener"
        target="_blank"
      >
        Website
      </a>
    </nav>
    <summary
      className="projectSection__summary"
      onClick={[Function]}
    />
  </section>
  <footer
    className="projectSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;

exports[`Render ProjectSection without props 1`] = `
<article
  className="projectSection"
>
  <header
    className="projectSection__header"
    onClick={[Function]}
  >
    <h2
      className="projectSection__name"
    />
  </header>
  <section
    className="projectSection__description"
    data-active={true}
  >
    <div
      className="projectSection__languages"
      onClick={[Function]}
    />
    <nav
      className="projectSection__links"
    />
    <summary
      className="projectSection__summary"
      onClick={[Function]}
    />
  </section>
  <footer
    className="projectSection__footer"
    data-active={true}
    onClick={[Function]}
  >
    <p
      data-active={true}
    >
      ^
    </p>
  </footer>
</article>
`;
